# KQL-MCP

./: .env.example  .gitignore  README.md  pyproject.toml
src/kql_mcp/: __init__.py  config.py  server.py
src/kql_mcp/connections/: __init__.py  adx.py  log_analytics.py  registry.py
src/kql_mcp/prompts/: __init__.py  templates.py
src/kql_mcp/resources/: __init__.py  kql_reference.py  query_library.py
src/kql_mcp/tools/: __init__.py  formatting.py  validation.py
